make header fixed visible

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
   padding: 0 $header-list-padding-horizontal;
   margin: 0;
   background-color: $header-background;
+  height: $header-height;
 }
 
 .item {
